--- a/node_react_app/backend/package.json
+++ b/node_react_app/backend/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^6.2.1",
     "dotenv": "^10.0.0",
+    "ebay-oauth-nodejs-client": "^1.2.1",
     "express": "^4.17.1",
     "mongoose": "^6.0.8"
   }
