--- a/node_react_app/frontend/package.json
+++ b/node_react_app/frontend/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^1.6.4",
     "react-button": "^1.2.1",
     "react-dom": "^17.0.2",
+    "react-image": "^4.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^1.1.5",
     "web-vitals": "^1.1.2"
