--- a/node_react_app/frontend/package.json
+++ b/node_react_app/frontend/package.json
@@ -14,6 +14,7 @@
     "react-image": "^4.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^1.1.5",
+    "react-table": "^7.7.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
