--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-################################################################################
+﻿################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
+/.vs/slnx.sqlite-journal
 /.vs/slnx.sqlite
+/.gitignore
+/.vs
