--- a/node_react_app/.gitignore
+++ b/node_react_app/.gitignore
@@ -3,7 +3,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+./frontend/node_modules/
+./backend/node_modules/
 /.pnp
 .pnp.js
 
