--- a/node_react_app/frontend/package.json
+++ b/node_react_app/frontend/package.json
@@ -23,7 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4000/",
+  "proxy": "https://localhost:4000/",
   "eslintConfig": {
     "extends": [
       "react-app",
