--- a/node_react_app/backend/.env
+++ b/node_react_app/backend/.env
@@ -1,3 +1,6 @@
 DB_URI=mongodb+srv://soul_sucker:soulsRus@cluster0.eulwe.mongodb.net/node_soulseller?retryWrites=true&w=majority
 PORT=4000
 NODE_ENV=Dev
+SECRET_KEY=VsKbw2yY4M5n
+ETSY_KEY=b397ddo9ov4lu91igrv1rjjc
+ETSY_VERIFY=dL5oT2IMlIV6zVXXRRaEk-OwbVGPKrlU0ids8Dg2ahk
