--- a/node_react_app/.gitignore
+++ b/node_react_app/.gitignore
@@ -1,5 +1,6 @@
 /backend/node_modules/
 /node_modules/
+/.DS_Store
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
