--- a/node_react_app/frontend/package.json
+++ b/node_react_app/frontend/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "button": "^1.1.1",
+    "mongoose": "^6.0.13",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-button": "^1.2.1",
@@ -23,7 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://localhost:4000/",
+  "proxy": "http://localhost:4000/",
   "eslintConfig": {
     "extends": [
       "react-app",
