--- a/node_react_app/backend/package.json
+++ b/node_react_app/backend/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "multer-gridfs-storage": "^5.0.2"
   }
 }
