--- a/node_react_app/frontend/package.json
+++ b/node_react_app/frontend/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.2.1",
+    "@mui/material": "^5.2.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -13,6 +19,7 @@
     "react-bootstrap": "^1.6.4",
     "react-button": "^1.2.1",
     "react-dom": "^17.0.2",
+    "react-edit-text": "^4.2.0",
     "react-image": "^4.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^1.1.5",
