--- a/node_react_app/backend/package.json
+++ b/node_react_app/backend/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^10.0.0",
     "ebay-oauth-nodejs-client": "^1.2.1",
     "express": "^4.17.1",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "multer": "^1.4.3",
